# cpp-opencl

./: CMakeLists.txt  README.md  restrict.patch
cmake/: FindClang.cmake  FindLLVM.cmake
include/: cl.h
sources/: CMakeLists.txt  Main.cpp
sources/CBackend/: CBackend.cpp  CMakeLists.txt
sources/CBackend/TargetInfo/: CBackendTargetInfo.cpp  CMakeLists.txt
sources/compiler/: BitcodeDisassembler.cpp  BitcodeDisassembler.h  Compiler.cpp  Compiler.h  MainEntry.cpp  MainEntry.h  Rewriter.cpp  Rewriter.h
sources/compute/: ParallelForEach.h
tests/: CMakeLists.txt  kernel.cpp  test.cpp  test_kernel.cpp  test_rewriter.cpp
